--- a/src/umbraco/Views/Test.cshtml
+++ b/src/umbraco/Views/Test.cshtml
@@ -4,7 +4,7 @@
 @{
 	Layout = null;
 }
-
+@*Image from umbraco media section*@
 <img src="@Model.Image?.Url()?width=200&format=webp"/>
-
+@*Image from external source*@
 <img src="/media/https://picsum.photos/2000/3000?width=200&format=webp"/>
